--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simplefolio",
+  "name": "bishal-jaiswal-portfolio",
   "version": "1.0.1",
   "private": "true",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
